Remove usages of `StringUtils`